--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,5 +116,4 @@ jobs:
       - name: Run cargo-deny (advisories only)
         uses: EmbarkStudios/cargo-deny-action@v2
         with:
-          command: check
-          arguments: advisories
+          command: check advisories
