--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
-members = [
-    "app_core",
-    "adapters/incoming/web",
-    "adapters/outgoing/pdf",
-]
+members = ["features/pdfs/core", "features/pdfs/adapters/incoming/web", "features/pdfs/adapters/outgoing/pdf"]
 
 [workspace.dependencies]
 actix-web = "4"
