--- a/features/sheets/adapters/incoming/web/Cargo.toml
+++ b/features/sheets/adapters/incoming/web/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "documents_storage"
+name = "sheets_web"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-web.workspace = true
