--- a/features/sheets/adapters/driven/metadata/Cargo.toml
+++ b/features/sheets/adapters/driven/metadata/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "sheets_storage"
+name = "sheets_metadata"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 sheets_core = { path = "../../../core" }
 async-trait.workspace = true
-anyhow.workspace = true
