--- a/features/sheets/core/Cargo.toml
+++ b/features/sheets/core/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait.workspace = true
+thiserror.workspace = true
+uuid = { version = "1.18.0", features = ["v4"] }
