--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ target/
 # already existing elements were commented out
 
 #/target
+
+# env files (can opt-in for committing if needed)
+.env*
+!.env.example
