--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,3 +8,6 @@ uuid = { version = "1.18.0", features = ["v4"] }
 anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+
+[dev-dependencies]
+pretty_assertions.workspace = true
