--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ thiserror = "2.0"
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
 async-trait = "0.1"
 sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid"] }
-tempdir = "0.3"
+tempfile = "3.21"
 testcontainers = "0.25"
 testcontainers-modules = { version = "0.13", features = ["postgres", "blocking"] }
 rstest = "0.26"
@@ -39,7 +39,7 @@ sqlx.workspace = true
 dotenvy.workspace = true
 
 [dev-dependencies]
-tempdir.workspace = true
+tempfile.workspace = true
 testcontainers.workspace = true
 testcontainers-modules.workspace = true
 rstest.workspace = true
