ci: update test command for OS compatibility in CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,14 @@ jobs:
         run: cargo build --workspace --all-features --all-targets
 
       - name: Test
-        run: cargo test --workspace --all-features --all-targets --no-fail-fast
+        # Requires Docker and Linux containers to be enabled on the runner.
+        run: |
+          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+            cargo test --workspace --all-features --all-targets --no-fail-fast
+          else
+            cargo test --workspace --all-features --all-targets --no-fail-fast --lib --bins
+          fi
+        shell: bash
 
       - name: Build (release)
         run: cargo build --workspace --all-features --release
