--- a/sheets/adapters/web/Cargo.toml
+++ b/sheets/adapters/web/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 sheets_core = { path = "../../core" }
+common = { path = "../../../common" }
 actix-web.workspace = true
 actix-multipart.workspace = true
 uuid.workspace = true
