--- a/sheets/core/Cargo.toml
+++ b/sheets/core/Cargo.toml
@@ -8,6 +8,7 @@ async-trait.workspace = true
 thiserror.workspace = true
 anyhow.workspace = true
 uuid.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 mockall.workspace = true
