--- a/sheets/adapters/pdf/Cargo.toml
+++ b/sheets/adapters/pdf/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 sheets_core = { path = "../../core" }
 async-trait.workspace = true
 tracing.workspace = true
+lopdf.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
