--- a/sheets/adapters/web/Cargo.toml
+++ b/sheets/adapters/web/Cargo.toml
@@ -10,3 +10,4 @@ actix-web.workspace = true
 actix-multipart.workspace = true
 uuid.workspace = true
 actix-files.workspace = true
+utoipa.workspace = true
