--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ members = [
     "sheets/adapters/db",
     "sheets/adapters/pdf",
     "actions/core",
-    "actions/adapters/web"
+    "actions/adapters/web",
+    "actions/adapters/pdf",
 ]
 
 [workspace.dependencies]
@@ -36,18 +37,24 @@ dotenvy = "0.15"
 tokio = { version = "1.47", features = ["rt", "macros"] }
 mockall = "0.13"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 lopdf = "0.38"
 utoipa = { version = "5", features = ["actix_extras"] }
-utoipa-swagger-ui = {version = "9.0", features = ["actix-web"]}
+utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
 utoipa-actix-web = "0.1"
+validator = { version = "0.20", features = ["derive"] }
+pdf-extract = "0.9"
 
 [dependencies]
+common = { path = "common" }
 sheets_core = { path = "sheets/core" }
 sheets_web = { path = "sheets/adapters/web" }
 sheets_storage = { path = "sheets/adapters/storage" }
 sheets_db = { path = "sheets/adapters/db" }
 sheets_pdf = { path = "sheets/adapters/pdf" }
-common = { path = "common" }
+actions_core = { path = "actions/core" }
+actions_web = { path = "actions/adapters/web" }
+actions_pdf = { path = "actions/adapters/pdf" }
 actix-web.workspace = true
 tracing-actix-web.workspace = true
 anyhow.workspace = true
@@ -64,6 +71,7 @@ testcontainers.workspace = true
 testcontainers-modules.workspace = true
 rstest.workspace = true
 pretty_assertions.workspace = true
+pdf-extract.workspace = true
 
 [features]
 tracing-logs = []
