--- a/sheets/adapters/db/Cargo.toml
+++ b/sheets/adapters/db/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 sheets_core = { path = "../../core" }
+actions_core = { path = "../../../actions/core" }
 async-trait.workspace = true
 sqlx.workspace = true
 tracing.workspace = true
