--- a/sheets/adapters/storage/Cargo.toml
+++ b/sheets/adapters/storage/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 sheets_core = { path = "../../core" }
+actions_core = { path = "../../../actions/core" }
 async-trait.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
