feat: implement attaching ability modifier calc script
Signed-off-by: Maik Basel <maik.basel@gmx.de>

--- a/actions/adapters/pdf/Cargo.toml
+++ b/actions/adapters/pdf/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 actions_core = { path = "../../core" }
+common = { path = "../../../common" }
 async-trait.workspace = true
 tracing.workspace = true
 lopdf.workspace = true
