--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,6 +10,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 serde.workspace = true
 utoipa.workspace = true
+lopdf.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
