--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,4 +73,6 @@ pretty_assertions.workspace = true
 lopdf.workspace = true
 
 [features]
-tracing-logs = []
+default = ["pretty-logs"]
+pretty-logs = ["common/pretty-logs"]
+json-logs = ["common/json-logs"]
