--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -14,3 +14,8 @@ lopdf.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
+
+[features]
+default = ["pretty-logs"]   # dev default
+pretty-logs = []
+json-logs = []
