--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,6 +20,7 @@ members = [
 actix-web = "4"
 actix-multipart = "0.7"
 actix-files = "0.6.7"
+actix-cors = "0.7.1"
 tracing = "0.1"
 tracing-actix-web = "0.7"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
@@ -55,6 +56,7 @@ actions_core = { path = "actions/core" }
 actions_web = { path = "actions/adapters/web" }
 actions_pdf = { path = "actions/adapters/pdf" }
 actix-web.workspace = true
+actix-cors.workspace = true
 tracing-actix-web.workspace = true
 anyhow.workspace = true
 uuid.workspace = true
