--- a/frontend/apps/native/tsconfig.json
+++ b/frontend/apps/native/tsconfig.json
@@ -12,8 +12,13 @@
     "noEmit": true,
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true,
-    "target": "ES2020"
+    "target": "ES2020",
+    "strictNullChecks": true
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
