--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "clean": "turbo clean",
     "check-types": "turbo check-types",
     "shadcn": "pnpm --filter @repo/ui shadcn",
-    "tauri": "pnpm --filter native tauri"
+    "tauri": "pnpm --filter native tauri",
+    "prepare": "husky",
+    "check": "npx ultracite@latest check",
+    "fix": "npx ultracite@latest fix"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
+    "@biomejs/biome": "2.3.4",
+    "husky": "^9.1.7",
     "turbo": "^2.3.3",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "ultracite": "6.3.2"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
