--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.1.1",
     "@tauri-apps/plugin-http": "^2.5.4",
     "@wojtekmaj/react-hooks": "^2.0.4",
@@ -47,6 +48,7 @@
     "react-hook-form": "^7.66.0",
     "react-pdf": "^10.2.0",
     "sonner": "^2.0.7",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
