--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -9,6 +9,7 @@
     "./lib/*": "./src/lib/*.ts",
     "./types/*": "./src/types/*.ts",
     "./views/*": "./src/views/*.tsx",
+    "./context/*": "./src/context/*.tsx",
     "./globals.css": "./src/styles/globals.css",
     "./postcss.config": "./postcss.config.mjs",
     "./tailwind.config": "./tailwind.config.ts"
@@ -32,6 +33,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.1.1",
     "@tauri-apps/plugin-http": "^2.5.4",
     "@wojtekmaj/react-hooks": "^2.0.4",
