--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
