--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@tauri-apps/plugin-http": "^2.5.4",
     "@wojtekmaj/react-hooks": "^2.0.4",
     "autoprefixer": "^10.4.20",
