--- a/frontend/apps/native/tsconfig.json
+++ b/frontend/apps/native/tsconfig.json
@@ -3,12 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@repo/ui/*": [
-        "../../packages/ui/src/*"
-      ]
+      "@/*": ["./*"],
+      "@repo/ui/*": ["../../packages/ui/src/*"]
     },
     "module": "ESNext",
     "moduleResolution": "Bundler",
@@ -19,9 +15,7 @@
     "target": "ES2020",
     "strictNullChecks": true
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "references": [
     {
       "path": "./tsconfig.node.json"
