--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.9.5",
     "natural": "^8.0.1",
     "next": "^15.4.7",
+    "next-themes": "^0.4.6",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
