--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
