--- a/frontend/packages/ui/tsconfig.json
+++ b/frontend/packages/ui/tsconfig.json
@@ -5,17 +5,10 @@
     "rootDir": "src",
     "baseUrl": ".",
     "paths": {
-      "@repo/ui/*": [
-        "./src/*"
-      ]
+      "@repo/ui/*": ["./src/*"]
     },
     "strictNullChecks": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
