feat: add environment-based configuration & prod compose file
Signed-off-by: Maik Basel <maik.basel@gmx.de>

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -65,6 +65,7 @@ dotenvy.workspace = true
 utoipa.workspace = true
 utoipa-swagger-ui.workspace = true
 utoipa-actix-web.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
