--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -6,11 +6,8 @@ node_modules
 .pnp.js
 
 # Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!.env.example
 
 # Testing
 coverage
@@ -36,3 +33,4 @@ yarn-error.log*
 # Misc
 .DS_Store
 *.pem
+
