--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -15,13 +15,12 @@
     "./tailwind.config": "./tailwind.config.ts"
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
+    "lint": "npx ultracite check",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "shadcn": "pnpm dlx shadcn@latest"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^1.12.4",
     "@types/node": "^20.11.24",
