--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "axios": "^1.13.2",
     "lucide-react": "^0.474.0",
     "mongoose": "^8.9.5",
     "natural": "^8.0.1",
