--- a/frontend/apps/web/tsconfig.json
+++ b/frontend/apps/web/tsconfig.json
@@ -11,6 +11,7 @@
         "name": "next"
       }
     ],
+    "allowImportingTsExtensions": true,
     "strictNullChecks": true
   },
   "include": [
