--- a/frontend/packages/ui/tsconfig.json
+++ b/frontend/packages/ui/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@repo/ui/*": ["./src/*"]
     },
+    "allowImportingTsExtensions": true,
     "strictNullChecks": true
   },
   "include": ["src"],
