feat(frontend): implement server-side backend requests

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,5 +2,4 @@
 # cp .env.example .env
 
 WEB_PORT=3000
-NEXT_PUBLIC_API_URL=http://localhost:8081
-API_URL=http://backend:8081
+API_URL=http://localhost:8081
