--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -44,6 +44,7 @@
     "@tauri-apps/plugin-http": "^2.5.4",
     "@wojtekmaj/react-hooks": "^2.0.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
