--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -42,10 +42,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  NODE_VERSION: '23'
-  PNPM_VERSION: '9.15.5'
-
 jobs:
   lint:
     name: Lint & Format Check
@@ -56,15 +52,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Read tool versions
+        id: asdf
+        run: |
+          echo "nodejs=$(grep nodejs .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "pnpm=$(grep pnpm .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ steps.asdf.outputs.nodejs }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: ${{ steps.asdf.outputs.pnpm }}
           run_install: false
 
       - name: Get pnpm store directory
@@ -98,15 +100,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Read tool versions
+        id: asdf
+        run: |
+          echo "nodejs=$(grep nodejs .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "pnpm=$(grep pnpm .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ steps.asdf.outputs.nodejs }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: ${{ steps.asdf.outputs.pnpm }}
           run_install: false
 
       - name: Get pnpm store directory
@@ -146,15 +154,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Read tool versions
+        id: asdf
+        run: |
+          echo "nodejs=$(grep nodejs .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "pnpm=$(grep pnpm .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ steps.asdf.outputs.nodejs }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: ${{ steps.asdf.outputs.pnpm }}
           run_install: false
 
       - name: Get pnpm store directory
@@ -202,15 +216,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Read tool versions
+        id: asdf
+        run: |
+          echo "nodejs=$(grep nodejs .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "pnpm=$(grep pnpm .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ steps.asdf.outputs.nodejs }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: ${{ steps.asdf.outputs.pnpm }}
           run_install: false
 
       - name: Get pnpm store directory
@@ -248,15 +268,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Read tool versions
+        id: asdf
+        run: |
+          echo "nodejs=$(grep nodejs .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "pnpm=$(grep pnpm .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ steps.asdf.outputs.nodejs }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: ${{ steps.asdf.outputs.pnpm }}
 
       - name: Run pnpm audit
         run: pnpm audit --audit-level moderate
