--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@biomejs/biome": "2.3.4",
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
+    "pdf-lib": "^1.17.1",
     "turbo": "^2.3.3",
     "typescript": "5.5.4",
     "ultracite": "6.3.2"
