--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -175,3 +175,36 @@ jobs:
 
       - name: Check for unused dependencies
         run: cargo +nightly udeps --workspace --all-targets
+
+  js-tests:
+    name: JavaScript Tests (D&D Helpers)
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: apps/api/crates/actions/core/js
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Read tool versions
+        id: asdf
+        run: |
+          echo "nodejs=$(grep nodejs .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "pnpm=$(grep pnpm .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
+        working-directory: .
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ steps.asdf.outputs.nodejs }}
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ steps.asdf.outputs.pnpm }}
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run Vitest tests
+        run: pnpm test
