chore: audit pnpm deps
Signed-off-by: Maik Basel <maik.basel@gmx.de>

--- a/package.json
+++ b/package.json
@@ -30,7 +30,18 @@
   "pnpm": {
     "overrides": {
       "@types/react": "^18.3.12",
-      "@types/react-dom": "^18.3.1"
+      "@types/react-dom": "^18.3.1",
+      "esbuild@<=0.24.2": ">=0.25.0",
+      "@babel/runtime-corejs3@<7.26.10": ">=7.26.10",
+      "@babel/helpers@<7.26.10": ">=7.26.10",
+      "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+      "tmp@<=0.2.3": ">=0.2.4",
+      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "glob@>=10.2.0 <10.5.0": ">=10.5.0",
+      "glob@>=11.0.0 <11.1.0": ">=11.1.0",
+      "@trpc/server@>=11.0.0 <11.8.0": ">=11.8.0",
+      "qs@<6.14.1": ">=6.14.1"
     }
   }
 }
