--- a/apps/api/crates/actions/adapters/pdf/Cargo.toml
+++ b/apps/api/crates/actions/adapters/pdf/Cargo.toml
@@ -2,6 +2,7 @@
 name = "actions_pdf"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 actions_core = { path = "../../core" }
