--- a/apps/api/crates/sheets/adapters/web/Cargo.toml
+++ b/apps/api/crates/sheets/adapters/web/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sheets_web"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 sheets_core = { path = "../../core" }
