--- a/apps/api/crates/sheets/core/Cargo.toml
+++ b/apps/api/crates/sheets/core/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sheets_core"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 async-trait.workspace = true
