--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     hooks:
     -   id: ultracite-fix
         name: Format frontend with Ultracite
-        entry: pnpm dlx ultracite fix
+        entry: pnpm exec ultracite fix
         language: system
         files: \.(js|jsx|ts|tsx|json|jsonc)$
         pass_filenames: false
