--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbopack --port 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "npx ultracite check",
+    "lint": "pnpm exec ultracite check",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
