--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,7 @@
     "./tailwind.config": "./tailwind.config.ts"
   },
   "scripts": {
-    "lint": "npx ultracite check",
+    "lint": "pnpm exec ultracite check",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "shadcn": "pnpm dlx shadcn@latest"
