--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,12 +13,20 @@ jobs:
     - uses: actions/setup-node@v6
       with:
         node-version: lts/*
+    - name: Install Rust toolchain
+      uses: dtolnay/rust-toolchain@stable
+    - name: Cache Rust dependencies
+      uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: apps/api
     - name: Install dependencies
       run: npm install -g pnpm && pnpm install
     - name: Install Playwright Browsers
       run: pnpm exec playwright install --with-deps
     - name: Run Playwright tests
       run: pnpm exec playwright test
+      env:
+        NODE_ENV: test
     - uses: actions/upload-artifact@v6
       if: ${{ !cancelled() }}
       with:
