--- a/apps/api/crates/actions/core/Cargo.toml
+++ b/apps/api/crates/actions/core/Cargo.toml
@@ -10,3 +10,8 @@ thiserror.workspace = true
 uuid.workspace = true
 tracing.workspace = true
 serde_json.workspace = true
+
+[dev-dependencies]
+mockall.workspace = true
+pretty_assertions.workspace = true
+tokio.workspace = true
