--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@biomejs/biome": "2.3.10",
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
+    "knip": "^5.79.0",
     "pdf-lib": "^1.17.1",
     "turbo": "^2.7.2",
     "typescript": "5.9.3",
