--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "cargo run",
     "build": "cargo build --release --no-default-features --features json-logs",
-    "lint": "cargo clippy --workspace --all-targets --all-features -- -D warnings",
-    "fix": "cargo fmt --all && cargo clippy --fix --workspace --all-targets --allow-dirty --allow-staged",
+    "lint": "cargo fmt --all -- --check && cargo clippy --workspace --all-targets --all-features -- -D warnings",
+    "lint:fix": "cargo fmt --all && cargo clippy --fix --workspace --all-targets --allow-dirty --allow-staged",
     "check-types": "cargo check --workspace --all-features --all-targets",
     "test": "cargo test"
   }
