--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,8 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
+    "@repo/api-spec": "workspace:*",
+    "zod": "^3.24.0",
     "@dnd-kit/core": "^6.3.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -53,7 +55,6 @@
     "swr": "^2.3.8",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
